add Symmetric encription

--- a/Red.Crypto.csproj
+++ b/Red.Crypto.csproj
@@ -11,8 +11,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <PackageReleaseNotes>
-      -AES encryption
-      -AES decryption
+      -Generic symmetric encryption
+      -Generic symmetric decryption
     </PackageReleaseNotes>
   </PropertyGroup>
   <ItemGroup>
